Fixed menu links and fetching next week menu now on friday

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,13 +6,18 @@
         <ul class="nav pull-right">
           <% if(params['date'].present?)
              date = Date.parse(params['date']) %>
-          <li><%= link_to previous_business_day(previous_business_day(date)), 
-            previous_business_day(previous_business_day(date)).to_s %></li>
-          <li><%= link_to previous_business_day(date) , previous_business_day(date).to_s %></li>
-          <li class="active"><%= link_to date , date.to_s %></li>
-          <li><%= link_to next_business_day(date) , next_business_day(date).to_s %></li>
-          <li><%= link_to next_business_day(next_business_day(date)) , 
-            next_business_day(next_business_day(date)).to_s %></li>
+          <li><%= link_to previous_business_day(previous_business_day(current_business_day(date))), 
+            "/"+params['restaurant']+"/"+
+            previous_business_day(previous_business_day(current_business_day(date))).to_s %></li>
+          <li><%= link_to previous_business_day(current_business_day(date)),
+            "/"+params['restaurant']+"/"+previous_business_day(current_business_day(date)).to_s %></li>
+          <li class="active"><%= link_to current_business_day(date) , 
+          "/"+params['restaurant']+"/"+current_business_day(date).to_s %></li>
+          <li><%= link_to next_business_day(current_business_day(date)) , 
+          "/"+params['restaurant']+"/"+next_business_day(current_business_day(date)).to_s %></li>
+          <li><%= link_to next_business_day(next_business_day(current_business_day(date))) , 
+            "/"+params['restaurant']+"/"+ 
+            next_business_day(next_business_day(current_business_day(date))).to_s %></li>
           <% end %>
         </ul>
       </nav>
